[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "jscodegen"
authors = [{name = "Kristian Sons", email = "kristian.sons@dfki.de"}]
license = {text = "MIT"}
description = "Python analogue of escodegen, the library for transforming ESPrima AST back into JS."
readme = "README.md"
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: OSI Approved",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ESPrima", "AST", "Mozilla", "escodegen", "JS", "JavaScript", "ECMAScript"]
urls = {Homepage = "https://github.com/up9inc/jscodegen.py"}
requires-python = ">=3.4"
dynamic = ["version"]

[tool.setuptools]
zip-safe = true
packages = ["jscodegen"]
include-package-data = false

[tool.setuptools_scm]

[tool.distutils.bdist_wheel]
universal = 1
