[metadata]
name = jscodegen
author = Kristian Sons
author_email = kristian.sons@dfki.de
license = MIT
description = Python analogue of escodegen, the library for transforming ESPrima AST back into JS.
url = https://github.com/up9inc/jscodegen.py
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: OSI Approved
	License :: OSI Approved :: MIT
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
keywords = ESPrima, AST, Mozilla, escodegen, JS, JavaScript, ECMAScript

[options]
python_requires = >=3.4
zip_safe = True
packages = jscodegen
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3

[bdist_wheel]
universal = 1
